# rustytree

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing.md  release-process.md  usage.md
notebooks/: README.md  klot_demo.ipynb
python/rustytree/: __init__.py  _array.py  backend.py
src/: array.rs  dtype_dispatch.rs  error.rs  glob.rs  icechunk_store.rs  lib.rs  node.rs  py_credentials.rs  runtime.rs  store.rs  url.rs  walk.rs
tests/: conftest.py  test_backend_entrypoint.py  test_chunks.py  test_codecs.py  test_eager_fetch.py  test_icechunk.py  test_lazy.py  test_phase1_scaffold.py  test_to_rust_source.py  test_walk.py
