[package]
name = "rustytree"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
license = "AGPL-3.0-or-later"
authors = ["Alfonso Ladino <alfonso@atmoscale.ai>"]
description = "Rust-backed xarray DataTree backend for fast Zarr access from object storage"
repository = "https://github.com/aladinor/rustytree"

[lib]
name = "_rustytree"
crate-type = ["cdylib"]

[features]
# `extension-module` (default-on) keeps cargo test/build from linking
# libpython — pyo3 expects the runtime Python to supply it. Trade-off:
# Rust unit tests can't call `Python::initialize/attach` (we cover that
# behaviour via pytest in `tests/`).
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
# Async runtime + error machinery. zarrs, icechunk, and object_store land in
# the next PR (the actual hierarchy walk).
pyo3 = { version = "0.28" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
thiserror = "2"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
unwrap_used = "warn"
# `#[pyfunction]` macro expansion includes `.into()` conversions on `PyErr` that
# clippy::pedantic flags as useless. Known PyO3 false positive — allow it.
useless_conversion = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
