[package]
name = "rustytree"
version = "0.2.1"
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"
authors = ["Alfonso Ladino <alfonso@atmoscale.ai>"]
description = "Rust-backed xarray DataTree backend for fast Zarr access from object storage"
repository = "https://github.com/aladinor/rustytree"

[lib]
name = "_rustytree"
crate-type = ["cdylib"]

[features]
# `extension-module` (default-on) keeps cargo test/build from linking
# libpython — pyo3 expects the runtime Python to supply it. Trade-off:
# Rust unit tests can't call `Python::initialize/attach` (we cover that
# behaviour via pytest in `tests/`).
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
# `chrono` feature lets us extract credential `expires_after` (a Python
# `datetime`) straight into `DateTime<Utc>` in the credential-fetcher shim
# (`src/py_credentials.rs`).
pyo3 = { version = "0.28", features = ["chrono"] }
numpy = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"
thiserror = "2"

# Credential-fetcher shim (`src/py_credentials.rs`): re-register icechunk-python's
# `PythonCredentialsFetcher` typetag inside our cdylib so `Session::from_bytes`
# can deserialize arraylake/Earthmover sessions. `typetag` MUST match the version
# icechunk links (`=0.2.21`) so the `inventory` registry is shared and our impls
# are found by icechunk's `Session` deserializer; a skew silently splits the
# registry. `chrono` unifies to icechunk's 0.4.x so `DateTime<Utc>` types match.
typetag = "=0.2.21"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }

# Zarr v3 reader stack. Remote object_store backends (S3/GCS/Azure/HTTP)
# land in a follow-up; this PR ships local-filesystem only for both the
# vanilla and icechunk paths.
#
# `object_store` is reached through `zarrs_object_store::object_store` (re-
# exported) so we don't have to track its semver-incompatible version
# bumps separately. The `fs` feature on `zarrs_object_store` enables
# `LocalFileSystem` in the underlying object_store.
#
# `zlib` enables zarrs's `numcodecs.zlib` codec — a non-standard but common
# numcodecs-namespace codec that zarr-python writes (e.g. the GOES-16 arraylake
# dataset uses `bytes -> numcodecs.shuffle -> numcodecs.zlib`). zarrs documents
# its impl as byte-compatible with zarr-python's, mirroring how icechunk reads
# such data by delegating to zarr-python's numcodecs shim. `numcodecs.shuffle`
# is always compiled by zarrs; the other common compressors (gzip, blosc, zstd,
# crc32c) come from zarrs's default features, which we keep enabled.
zarrs = { version = "0.22", features = ["async", "zlib"] }
zarrs_storage = { version = "0.4", features = ["async"] }
zarrs_object_store = { version = "0.6", features = ["fs", "aws"] }
serde_json = "1"

# icechunk = transactional Zarr v3 storage layer. `zarrs_icechunk` wraps an
# icechunk `Session` as `AsyncReadableListableStorageTraits` so the walk
# code stays polymorphic: the same `open_single` runs against either an
# icechunk session or a vanilla object_store-backed store.
icechunk = "=2.0.5"
zarrs_icechunk = "0.5"

[dev-dependencies]
# Used by `src/py_credentials.rs` tests to round-trip `S3Credentials` through the
# same msgpack codec icechunk's `Session::{as,from}_bytes` use.
rmp-serde = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
unwrap_used = "warn"
# `#[pyfunction]` macro expansion includes `.into()` conversions on `PyErr` that
# clippy::pedantic flags as useless. Known PyO3 false positive — allow it.
useless_conversion = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
